# vial-qmk

./: readme.md
host/: CMakeLists.txt  Host.rc  host.cpp  host.h  images.h  resource.h
host/hidapi/lib/debug/: hidapi.lib
host/hidapi/lib/release/: hidapi.lib
host/install/: host.iss
keyboards/pabile/p48/: config.h  keyboard.json  p48.c  p48.h  rules.mk  types.h
keyboards/pabile/p48/keymaps/vial/: config.h  keymap.c  rules.mk  vial.json
keyboards/pabile/p48/python_time/: send_data.py
keyboards/ymdk/id75/: config.h  id75.c  id75.h  rules.mk  types.h
keyboards/ymdk/id75/keymaps/vial/: config.h  keymap.c  rules.mk  vial.json
keyboards/ymdk/id75/python_time/: send_data.py
